# Automaton

./: .gitignore  OUTLOOK.md  README.md  config.terrain.toml  keys.terrain.js  package.json
contracts/automaton/: Cargo.toml
contracts/automaton/examples/: schema.rs
contracts/automaton/src/: contract.rs  evt.rs  exec.rs  msg.rs  qry.rs  state.rs
contracts/coordinator/: README.md
contracts/microvault/: Cargo.toml  NOTICE  README.md
contracts/microvault/examples/: schema.rs
contracts/microvault/src/: contract.rs  error.rs  evt.rs  exec.rs  msg.rs  qry.rs  state.rs  util.rs
contracts/vanguard/: Cargo.toml
contracts/vanguard/examples/: schema.rs
contracts/vanguard/src/: contract.rs  error.rs  evt.rs  exec.rs  lib.rs  msg.rs  primitives.rs  qry.rs  state.rs  util.rs
frontend/: package.json
librs/order/: .gitignore  Cargo.toml  README.md
librs/order/src/: error.rs  lib.rs
