[package]
name = "voydwalkr-microvault"
version = "0.1.0"
authors = ["Kiruse <kiruse@kiruse.dev>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
bech32 = "0.8"
cosmwasm-std = { version = "0.16" }
cosmwasm-storage = { version = "0.16" }
cw-storage-plus = "0.8"
cw2 = "0.8"
k256 = "0.10"
num-rational = { version = "0.4", default-features = false }
ripemd = "0.1.1"
schemars = "0.8.8"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
sha2 = "0.10"
thiserror = { version = "1.0.26" }
voydwalkr-util = { git = "https://github.com/VoydWalkr/Util" }
voydwalkr-vanguard-order = { path = "../../librs/order" }

[dev-dependencies]
bip32 = "0.3"
cosmwasm-schema = { version = "0.16" }
hex = "0.4"
