[package]
name = "voydwalkr-vanguard-order"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmrs = "0.5.1"
cosmwasm-std = "0.16"
k256 = { version = "0.10", features = ["ecdsa"] }
schemars = "0.8.8"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
